--- a/src/styles/semantic.css
+++ b/src/styles/semantic.css
@@ -14,6 +14,7 @@
   --bg-surface-card: var(--color-purple-600);
   --bg-surface-input: var(--color-purple-500);
   --bg-surface-selected: var(--color-purple-400);
+  --bg-surface-disabled: var(--color-neutral-700);
   --bg-surface-primary: var(--color-brand-700);
   --bg-surface-primary-15: var(--color-brand-700-15);
   --bg-surface-primary-8: var(--color-brand-700-8);
@@ -54,10 +55,10 @@
   --color-text-on-destructive: var(--color-red-400);
   --color-text-on-inverse: var(--color-purple-900);
   --color-text-on-inverse-accent: var(--bg-surface-primary);
-  --color-border-subtle: var(--color-purple-500);
-  --color-border-extra-subtle: var(--color-purple-700);
-  --color-border-on-elevated: var(--color-purple-600);
-  --color-border-default: var(--color-purple-400);
+  --color-border-subtle: var(--color-neutral-700);
+  --color-border-extra-subtle: var(--color-neutral-800);
+  --color-border-on-elevated: var(--color-neutral-600);
+  --color-border-default: var(--color-neutral-500);
   --color-border-accent: var(--color-brand-500);
   --color-border-muted-accent: var(--color-brand-700-25);
   --color-border-strong: var(--color-brand-700);
